--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -63,19 +63,20 @@
 			</DataTemplate>
 			
 			<!-- MATCH BUILDER -->
-			<DataTemplate x:Key="builderTemplate" DataType="{x:Type matchmodel:FileMatchBuilderVM}">
+			<DataTemplate x:Key="builderTemplate" DataType="{x:Type appmodels:MatchBuilder}">
 
 				<DockPanel >
-					<ContentControl DockPanel.Dock="Top"
-									Content="{Binding ConditionPicker}" ContentTemplate="{StaticResource pickerTemplate}"/>
 
-					<TextBlock DockPanel.Dock="Top" Text="Conditions:"/>
-					<ListView x:Name="conditionsList" ItemsSource="{Binding ConditionModels}" DockPanel.Dock="Bottom"
+					<TextBlock DockPanel.Dock="Top" Text="SEARCH CONDITIONS:"/>
+					<ContentControl DockPanel.Dock="Top"
+									Content="{Binding Picker}" ContentTemplate="{StaticResource pickerTemplate}"/>
+					
+					<ListView x:Name="conditionsList" ItemsSource="{Binding DataModels}" DockPanel.Dock="Bottom"
 							  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
 
 						<ListView.ItemTemplate>
 
-							<DataTemplate DataType="{x:Type matchmodel:FileTestVM}">
+							<DataTemplate DataType="{x:Type mvvm:DataObjectVM}">
 
 								<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 									
@@ -84,7 +85,7 @@
 									<Button Name="btnRemove" Style="{StaticResource StdButton}" Grid.Row="0"
 											HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,4,0"
 									Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorLevel=1, AncestorType={x:Type ListView}},
-										Path=DataContext.CmdRemoveCondition}"
+										Path=DataContext.CmdRemove}"
 										CommandParameter="{Binding}">
 
 										<StackPanel>
@@ -110,10 +111,11 @@
 			<DataTemplate x:Key="actionTemplate" DataType="{x:Type appmodels:ActionBuilder}">
 
 				<DockPanel>
+
+					<TextBlock DockPanel.Dock="Top" Text="ACTIONS:"/>
 					<ContentControl DockPanel.Dock="Top"
 									Content="{Binding Picker}" ContentTemplate="{StaticResource actionPicker}"/>
-
-					<TextBlock DockPanel.Dock="Top" Text="Actions:"/>
+					
 					<ListView x:Name="actionsList" ItemsSource="{Binding DataModels}" DockPanel.Dock="Bottom"
 							  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
 
@@ -152,35 +154,42 @@
 
 		</ResourceDictionary>
 
-		
 	</UserControl.Resources>
 	
 	<!-- Use with CustomSearchVM -->
 	<Grid>
 
 		<Grid.RowDefinitions>
-			<RowDefinition Height="95*"/>
-			<RowDefinition Height="10*"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="50*"/>
-			<ColumnDefinition Width="2"/>
-			<ColumnDefinition Width="50*"/>
-		</Grid.ColumnDefinitions>
 
-		<ContentPresenter Grid.Row="0" Grid.Column="0" Content="{Binding MatchBuilder}" ContentTemplate="{StaticResource builderTemplate}"/>
+		<Grid Grid.Row="0">
 
-		<GridSplitter Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="2" MaxWidth="2" />
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="2"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
+
+
+		<ContentPresenter Grid.Row="0" Content="{Binding MatchBuilder}" ContentTemplate="{StaticResource builderTemplate}"/>
+
+		<GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="2" />
 		
-		<ContentPresenter Grid.Row="0" Grid.Column="2" Content="{Binding ActionBuilder}" ContentTemplate="{StaticResource actionTemplate}"/>
-		
-		<StackPanel Name="buttonPanel" Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Right">
-		<Button Name="btnAdd" Style="{StaticResource StdButton}" Content="Add" />
-		<Button Name="btnSave" Style="{StaticResource StdButton}" Content="Save Search"
-				Command="{Binding CmdSaveSearch}"/>
+		<ContentPresenter Grid.Row="2" Grid.Column="2" Content="{Binding ActionBuilder}" ContentTemplate="{StaticResource actionTemplate}"/>
+
+		</Grid>
+
+		<StackPanel Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Right"
+					Grid.Row="1">
+			<Button Name="btnSave" Style="{StaticResource StdButton}" Content="Save Search"
+				Command="{Binding CmdSaveOperation}"/>
 			<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="Load Search"
-					Command="{Binding CmdLoadSearch}">
-			
+					Command="{Binding CmdLoadOperation}">
+			</Button>
+			<Button Name="btnRun" Style="{StaticResource StdButton}" Content="RUN SEARCH"
+					Command="{Binding CmdRunOperation}">
 			</Button>
 		</StackPanel>
 
