--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -7,7 +7,8 @@
 			 xmlns:types="clr-namespace:Lemur.Types"
 			 xmlns:mvvm="clr-namespace:Lemur.Windows.MVVM"
 			 xmlns:appmodels="clr-namespace:TorboFile.ViewModels"
-             mc:Ignorable="d" 
+			 xmlns:controls="clr-namespace:TorboFile.View.Controls"
+			 mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
 	<UserControl.Resources>
@@ -152,47 +153,107 @@
 
 			</DataTemplate>
 
+			<DataTemplate x:Key="buildSearchTemplate" DataType="{x:Type appmodels:CustomSearchVM}">
+
+				<Grid>
+
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+
+					<Grid Grid.Row="0">
+
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="2"/>
+							<RowDefinition Height="Auto"/>
+						</Grid.RowDefinitions>
+
+
+						<ContentPresenter Grid.Row="0" Content="{Binding MatchBuilder}" ContentTemplate="{StaticResource builderTemplate}"/>
+
+						<GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="2" />
+
+						<ContentPresenter Grid.Row="2" Grid.Column="2" Content="{Binding ActionBuilder}" ContentTemplate="{StaticResource actionTemplate}"/>
+
+					</Grid>
+
+					<StackPanel Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Right"
+					Grid.Row="1">
+						<Button Name="btnSave" Style="{StaticResource StdButton}" Content="Save Search"
+				Command="{Binding CmdSaveOperation}"/>
+						<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="Load Search"
+					Command="{Binding CmdLoadOperation}">
+						</Button>
+						<Button Name="btnRun" Style="{StaticResource StdButton}" Content="RUN SEARCH"
+					Command="{Binding CmdRunOperation}">
+						</Button>
+					</StackPanel>
+
+				</Grid>
+				
+			</DataTemplate>
+			
+			<DataTemplate x:Key="runSearchTemplate" DataType="{x:Type appmodels:CustomSearchVM}">
+
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="95*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+
+
+					<DockPanel>
+						<StackPanel Orientation="Horizontal">
+							<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickFolder}">
+								<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
+							</Button>
+							<TextBox Name="fldDirectory" />
+						</StackPanel>
+						<controls:ProgressControl Margin="4,0,4,0" DockPanel.Dock="Top"
+                                  DataContext="{Binding SearchProgress}"
+                                  Visibility="{Binding Converter={StaticResource NonNullToVisible}}" />
+
+						<ContentPresenter Content="{Binding ResultsList}" >
+							<ContentPresenter.ContentTemplate>
+								<DataTemplate>
+
+									<controls:FileSelectionView />
+
+								</DataTemplate>
+							</ContentPresenter.ContentTemplate>
+						</ContentPresenter>
+					</DockPanel>
+
+					<StackPanel Name="btnPanel" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+						<Button Name="btnEdit" Content="NEW SEARCH" Command="{Binding CmdEditSearch}">
+
+						</Button>
+					</StackPanel>
+					
+				</Grid>
+
+			</DataTemplate>
+			
 		</ResourceDictionary>
 
 	</UserControl.Resources>
-	
-	<!-- Use with CustomSearchVM -->
-	<Grid>
 
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
+	<ContentPresenter Content="{Binding}">
+		<ContentPresenter.Style>
+			<Style TargetType="ContentPresenter">
+				<Style.Triggers>
+					<DataTrigger Binding="{Binding EditMode}" Value="true">
+						<Setter Property="ContentTemplate" Value="{StaticResource buildSearchTemplate}" />
+					</DataTrigger>
+					<DataTrigger Binding="{Binding EditMode}" Value="False">
+						<Setter Property="ContentTemplate" Value="{StaticResource runSearchTemplate}" />
+					</DataTrigger>
 
-		<Grid Grid.Row="0">
-
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="2"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
-
-
-		<ContentPresenter Grid.Row="0" Content="{Binding MatchBuilder}" ContentTemplate="{StaticResource builderTemplate}"/>
-
-		<GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="2" />
-		
-		<ContentPresenter Grid.Row="2" Grid.Column="2" Content="{Binding ActionBuilder}" ContentTemplate="{StaticResource actionTemplate}"/>
-
-		</Grid>
-
-		<StackPanel Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Right"
-					Grid.Row="1">
-			<Button Name="btnSave" Style="{StaticResource StdButton}" Content="Save Search"
-				Command="{Binding CmdSaveOperation}"/>
-			<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="Load Search"
-					Command="{Binding CmdLoadOperation}">
-			</Button>
-			<Button Name="btnRun" Style="{StaticResource StdButton}" Content="RUN SEARCH"
-					Command="{Binding CmdRunOperation}">
-			</Button>
-		</StackPanel>
-
-	</Grid>
+				</Style.Triggers>
+			</Style>
+		</ContentPresenter.Style>
+	</ContentPresenter>
 
 </UserControl>
